deployments/observability/victoriametrics/vm-graphite-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics-graphite
  namespace: observability
spec:
  type: NodePort
  selector:
    app: server
    app.kubernetes.io/instance: victoriametrics
    app.kubernetes.io/name: victoria-metrics-single
  ports:
    - name: graphite
      port: 2003
      targetPort: 2003
      nodePort: 32003
      protocol: TCP
