deployments/observability/victoriametrics/vm-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - vm.talos-cluster.local.obleey.com
  rules:
    - backendRefs:
        - name: victoria-metrics-single-server
          port: 8428
